# secoundbrain

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MIGRATION.md  README.md  TASKS.md  Taskfile.yml  YOUTUBE_WORKFLOW.md  auto_tags.py  auto_yaml_header.py  bootstrap-secondbrain.sh  cleanup_vault.py  create_dailies.py  fabric-secondbrain.yaml  init_vault.py  install.sh  organize.py  pyproject.toml  test_document.md  youtube_workflow.py
docs/: conf.py  index.rst  modules.rst
generators/: cluster_map.py  moc_builder.py  people_extractor.py  project_extractor.py
rules/: auto_tags.yaml  categorize.yml  rename.yml  summary.yml  tags.yml
src/fabric_second_brain/: __init__.py  banner.py  cleanup_vault.py  cli.py  color.py  config.py  document_processor.py  fabric.py  logger.py  utils.py
src/fabric_second_brain/commands/: __init__.py  classify.py  config.py  debug.py  doctor.py  ingest.py  init.py  organize.py  search.py  summary.py  vision.py  wisdom.py
src/fabric_second_brain/processors/: __init__.py  base.py  csv_processor.py  media.py  office.py  pandoc.py  pdf.py  postscript.py  text.py
src/second_brain/: cleanup_vault_en.py  youtube_workflow.py
src/secondbrain/: cleanup_vault.py  cleanup_vault_en.py  fabric_adapter.py  ingest.py  organize.py  translator.py
src/secondbrain/generators/: project_extractor.py
templates/: journal.md  person.md  project.md  research.md  resource.md
tests/: test_ingest_passthrough.py  test_translator.py
