[project]
name = "fabric-second-brain"
version = "0.2.0"
description = "Automatisierte Second Brain Organisation mit Fabric AI + Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anton Feldmann", email = "anton@feldmann.dev"}
]
keywords = ["obsidian", "fabric", "second-brain", "pkm", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "python-frontmatter>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
# Haupt-Organisationstools
organize = "organize:main"
init-vault = "init_vault:main"
cleanup-vault = "cleanup_vault:main"

# Daily Notes
create-dailies = "create_dailies:main"

# YouTube Workflow
youtube = "youtube_workflow:main"

# Generators
moc-builder = "generators.moc_builder:main"
people-extractor = "generators.people_extractor:main"
project-extractor = "generators.project_extractor:main"
cluster-map = "generators.cluster_map:main"

# Auto-Tools
auto-yaml-header = "auto_yaml_header:main"
auto-tags = "auto_tags:main"

[project.urls]
Homepage = "https://github.com/afeldman/fabric-second-brain"
Repository = "https://github.com/afeldman/fabric-second-brain"
Issues = "https://github.com/afeldman/fabric-second-brain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
