[project]
name = "secondbrain"
version = "0.2.0"
description = "Automatisierte Second Brain Organisation mit Fabric AI + Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anton Feldmann", email = "anton.feldmann@gmail.com"}
]
keywords = ["obsidian", "fabric", "second-brain", "pkm", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "python-decouple>=3.8",
    "python-frontmatter>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
# Haupt-Organisationstools
organize = "secondbrain.organize:main"
init-vault = "secondbrain.init_vault:main"
cleanup-vault = "secondbrain.cleanup_vault:main"

# Daily Notes
create-dailies = "secondbrain.create_dailies:main"

# YouTube Workflow
youtube = "secondbrain.youtube_workflow:main"

# Generators
moc-builder = "secondbrain.generators.moc_builder:main"
people-extractor = "secondbrain.generators.people_extractor:main"
project-extractor = "secondbrain.generators.project_extractor:main"
cluster-map = "secondbrain.generators.cluster_map:main"
# Auto-Tools
auto-yaml-header = "secondbrain.auto_yaml_header:main"
auto-tags = "secondbrain.auto_tags:main"

[project.urls]
Homepage = "https://github.com/afeldman/secondbrain"
Repository = "https://github.com/afeldman/secondbrain"
Issues = "https://github.com/afeldman/secondbrain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/secondbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
